@@ -10,7 +10,9 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
      document 'composition' attribute
 
  - creating new SQL tables to handle usability feature
-
+ - new schema result objects for UQC tables
+ - modified mqc outcomes to return uqc data in json
+ 
 release 64.1
  - SeqQC viewer - function to draw readonly representation of the
    utility flag
